--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -48,3 +48,11 @@
 - name: put server.xml
   template: src=server8.xml dest=/opt/tomcat{{ tomcat_major_version }}/conf/server.xml owner=root group=tomcat{{ tomcat_major_version }} mode=0640
   when: "tomcat_major_version == '8'"
+
+- name: put systemd unit file to its destination
+  template: src=tomcat.service dest="/etc/systemd/system/tomcat{{ tomcat_major_version }}.service" owner=root group=root mode=0644
+  when: "(ansible_distribution == 'Debian' and ansible_distribution_major_version == '8') or (ansible_distribution == 'Ubuntu' and (ansible_distribution_version|version_compare(14.04, '>')))"
+
+- name: enable tomcat service
+  service: name="tomcat{{ tomcat_major_version }}" enabled=yes state=started
+  when: "(ansible_distribution == 'Debian' and ansible_distribution_major_version == '8') or (ansible_distribution == 'Ubuntu' and (ansible_distribution_version|version_compare(14.04, '>')))"
